--- a/config
+++ b/config
@@ -1,6 +1,6 @@
 #!/usr/bin/env bash
-export ELASTICSEARCH_IMAGE=${ELASTICSEARCH_IMAGE:="elasticsearch"}
-export ELASTICSEARCH_IMAGE_VERSION=${ELASTICSEARCH_IMAGE_VERSION:="2.3.5"}
+export ELASTICSEARCH_IMAGE=${ELASTICSEARCH_IMAGE:="docker.elastic.co/elasticsearch/elasticsearch-oss"}
+export ELASTICSEARCH_IMAGE_VERSION=${ELASTICSEARCH_IMAGE_VERSION:="6.4.0"}
 export ELASTICSEARCH_ROOT=${ELASTICSEARCH_ROOT:="/var/lib/dokku/services/elasticsearch"}
 export ELASTICSEARCH_HOST_ROOT=${ELASTICSEARCH_HOST_ROOT:=$ELASTICSEARCH_ROOT}
 
